<resources>
    <string name="app_name">SoftwareDesign-Lab3</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="all_notes">All notes</string>
    <string name="tags">Tags</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="title">Title</string>
    <string name="title_descending">Title (descending)</string>
    <string name="date">Date</string>
    <string name="date_descending">Date (descending)</string>
</resources>
